# LP

./: .gitignore  BLPG_CPU_OMP_timing.txt  CMakeLists.txt  LICENSE  LP.sln  README.md  RGBLP  RGBSolve  ReproduceResults.bat  ReproduceResults.sh  timings.txt  timingsNew.txt  timingsOld.txt
CLP/: CLP.vcxproj  CLP.vcxproj.filters  CMakeLists.txt  clp.cpp
CMake/: Utils.cmake
CPLEX/: CMakeLists.txt  CPLEX.vcxproj  CPLEX.vcxproj.filters  cplex.cpp
GLPK/: CMakeLists.txt  GLPK.vcxproj  GLPK.vcxproj.filters  GPU_Tester.cpp  GPU_Tester.cu  ReadMe
GenFile/: CMakeLists.txt  GenFile.filters  GenFile.vcxproj  genfile.cpp
GurungRay/: BLPG-Solver.vcxproj  BLPG_CPU_OMP_timing.txt  BLPG_CPU_timing.txt  BLPG_GPU_timing.txt  CMakeLists.txt  GPU_Tester.cu  ReadMe  dataStructure.h  glpk_lp_solver.cpp  parseBenchmark.cpp  parseBenchmark.h  simplex-FLOPScomputedFilecu  simplex-cuRemovedlong  simplex.cu  simplex.cuh
GurungRay/benchmarks/: ADLITTLE_A.txt  ADLITTLE_B.txt  AFIRO_A.txt  BLEND_A.txt  BLEND_C.txt  ISRAEL_A.txt  SC105_A.txt  SC105_B.txt  SC205_A.txt  SC50B_B.txt  SC50B_C.txt  Test_A.txt  Test_B.txt  Test_C.txt
LP/: Auxilary.h  CMakeLists.txt  FileIO.cpp  FileIO.h  FileIO.hpp  LP.vcxproj  main.cu  makefile
benchmarks/: 10000_A.txt  10000_B.txt  1000_A.txt  1000_B.txt  100_A.txt  100_B.txt  1024.mps  1024_A.txt  1024_B.txt  10_A.txt  10_B.txt  128.mps  128_A.txt  128_B.txt  131072_A.txt  131072_B.txt  16.mps  16384.mps  16384_A.txt  16384_B.txt  16_A.txt  16_B.txt  1_A.txt  2048.mps  2048_A.txt  2048_B.txt  256.mps  256_A.txt  256_B.txt  2_A.txt  2_B.txt  32.mps  32766_B.txt  32768.mps  32768_A.txt  32768_B.txt  32_A.txt  32_B.txt  4096.mps  4096_A.txt  (+28 more)
include/clp/: ClpPrimalColumnSteepest.cpp
include/math/: basic_functions.h  expm.h  matrix.cpp  matrix.h  type_conversion.h  type_conversion.hpp  uni_sphere.cpp  uni_sphere.h
include/math/glpk_lp_solver/: glpk_lp_solver.h
matlab/: LPtimingScript.m
timings/: CPLEXtimings.txt  CPLEXtimingsv2.txt  GLPK_OMPtimings.txt  GLPKtimings.txt  GRtimings.txt  timings.txt  timingsNew.txt  timingsOld.txt
